// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App  should match the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <App
    user={
      Object {
        "name": "",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <header>
          <NavLink
            activeClassName="active"
            ariaCurrent="true"
            className="logo1"
            to="/"
          >
            Movie
          </NavLink>
          <NavLink
            activeClassName="active"
            ariaCurrent="true"
            className="logo2"
            to="/"
          >
            Tracker
          </NavLink>
          <NavLink
            activeClassName="active"
            ariaCurrent="true"
            className="login"
            to="/login/"
          >
            Login / Sign up
          </NavLink>
        </header>,
        <Route
          component={[Function]}
          exact={true}
          path="/favorites"
        />,
        <Route
          component={[Function]}
          exact={true}
          path="/"
        />,
        <Route
          component={[Function]}
          path="/login/"
          strict={true}
        />,
      ],
      "className": "App",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <NavLink
              activeClassName="active"
              ariaCurrent="true"
              className="logo1"
              to="/"
            >
              Movie
            </NavLink>,
            <NavLink
              activeClassName="active"
              ariaCurrent="true"
              className="logo2"
              to="/"
            >
              Tracker
            </NavLink>,
            <NavLink
              activeClassName="active"
              ariaCurrent="true"
              className="login"
              to="/login/"
            >
              Login / Sign up
            </NavLink>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "activeClassName": "active",
              "ariaCurrent": "true",
              "children": "Movie",
              "className": "logo1",
              "to": "/",
            },
            "ref": null,
            "rendered": "Movie",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "activeClassName": "active",
              "ariaCurrent": "true",
              "children": "Tracker",
              "className": "logo2",
              "to": "/",
            },
            "ref": null,
            "rendered": "Tracker",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "activeClassName": "active",
              "ariaCurrent": "true",
              "children": "Login / Sign up",
              "className": "login",
              "to": "/login/",
            },
            "ref": null,
            "rendered": "Login / Sign up",
            "type": [Function],
          },
        ],
        "type": "header",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "component": [Function],
          "exact": true,
          "path": "/favorites",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "component": [Function],
          "exact": true,
          "path": "/",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "component": [Function],
          "path": "/login/",
          "strict": true,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <header>
            <NavLink
              activeClassName="active"
              ariaCurrent="true"
              className="logo1"
              to="/"
            >
              Movie
            </NavLink>
            <NavLink
              activeClassName="active"
              ariaCurrent="true"
              className="logo2"
              to="/"
            >
              Tracker
            </NavLink>
            <NavLink
              activeClassName="active"
              ariaCurrent="true"
              className="login"
              to="/login/"
            >
              Login / Sign up
            </NavLink>
          </header>,
          <Route
            component={[Function]}
            exact={true}
            path="/favorites"
          />,
          <Route
            component={[Function]}
            exact={true}
            path="/"
          />,
          <Route
            component={[Function]}
            path="/login/"
            strict={true}
          />,
        ],
        "className": "App",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <NavLink
                activeClassName="active"
                ariaCurrent="true"
                className="logo1"
                to="/"
              >
                Movie
              </NavLink>,
              <NavLink
                activeClassName="active"
                ariaCurrent="true"
                className="logo2"
                to="/"
              >
                Tracker
              </NavLink>,
              <NavLink
                activeClassName="active"
                ariaCurrent="true"
                className="login"
                to="/login/"
              >
                Login / Sign up
              </NavLink>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "activeClassName": "active",
                "ariaCurrent": "true",
                "children": "Movie",
                "className": "logo1",
                "to": "/",
              },
              "ref": null,
              "rendered": "Movie",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "activeClassName": "active",
                "ariaCurrent": "true",
                "children": "Tracker",
                "className": "logo2",
                "to": "/",
              },
              "ref": null,
              "rendered": "Tracker",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "activeClassName": "active",
                "ariaCurrent": "true",
                "children": "Login / Sign up",
                "className": "login",
                "to": "/login/",
              },
              "ref": null,
              "rendered": "Login / Sign up",
              "type": [Function],
            },
          ],
          "type": "header",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "component": [Function],
            "exact": true,
            "path": "/favorites",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "component": [Function],
            "exact": true,
            "path": "/",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "component": [Function],
            "path": "/login/",
            "strict": true,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;

exports[`App  should match the snapshot when the user clicks login/signup 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <App
    user={
      Object {
        "name": "",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <header>
          <NavLink
            activeClassName="active"
            ariaCurrent="true"
            className="logo1"
            to="/"
          >
            Movie
          </NavLink>
          <NavLink
            activeClassName="active"
            ariaCurrent="true"
            className="logo2"
            to="/"
          >
            Tracker
          </NavLink>
          <NavLink
            activeClassName="active"
            ariaCurrent="true"
            className="login"
            to="/login/"
          >
            Login / Sign up
          </NavLink>
        </header>,
        <Route
          component={[Function]}
          exact={true}
          path="/favorites"
        />,
        <Route
          component={[Function]}
          exact={true}
          path="/"
        />,
        <Route
          component={[Function]}
          path="/login/"
          strict={true}
        />,
      ],
      "className": "App",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <NavLink
              activeClassName="active"
              ariaCurrent="true"
              className="logo1"
              to="/"
            >
              Movie
            </NavLink>,
            <NavLink
              activeClassName="active"
              ariaCurrent="true"
              className="logo2"
              to="/"
            >
              Tracker
            </NavLink>,
            <NavLink
              activeClassName="active"
              ariaCurrent="true"
              className="login"
              to="/login/"
            >
              Login / Sign up
            </NavLink>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "activeClassName": "active",
              "ariaCurrent": "true",
              "children": "Movie",
              "className": "logo1",
              "to": "/",
            },
            "ref": null,
            "rendered": "Movie",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "activeClassName": "active",
              "ariaCurrent": "true",
              "children": "Tracker",
              "className": "logo2",
              "to": "/",
            },
            "ref": null,
            "rendered": "Tracker",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "activeClassName": "active",
              "ariaCurrent": "true",
              "children": "Login / Sign up",
              "className": "login",
              "to": "/login/",
            },
            "ref": null,
            "rendered": "Login / Sign up",
            "type": [Function],
          },
        ],
        "type": "header",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "component": [Function],
          "exact": true,
          "path": "/favorites",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "component": [Function],
          "exact": true,
          "path": "/",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "component": [Function],
          "path": "/login/",
          "strict": true,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <header>
            <NavLink
              activeClassName="active"
              ariaCurrent="true"
              className="logo1"
              to="/"
            >
              Movie
            </NavLink>
            <NavLink
              activeClassName="active"
              ariaCurrent="true"
              className="logo2"
              to="/"
            >
              Tracker
            </NavLink>
            <NavLink
              activeClassName="active"
              ariaCurrent="true"
              className="login"
              to="/login/"
            >
              Login / Sign up
            </NavLink>
          </header>,
          <Route
            component={[Function]}
            exact={true}
            path="/favorites"
          />,
          <Route
            component={[Function]}
            exact={true}
            path="/"
          />,
          <Route
            component={[Function]}
            path="/login/"
            strict={true}
          />,
        ],
        "className": "App",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <NavLink
                activeClassName="active"
                ariaCurrent="true"
                className="logo1"
                to="/"
              >
                Movie
              </NavLink>,
              <NavLink
                activeClassName="active"
                ariaCurrent="true"
                className="logo2"
                to="/"
              >
                Tracker
              </NavLink>,
              <NavLink
                activeClassName="active"
                ariaCurrent="true"
                className="login"
                to="/login/"
              >
                Login / Sign up
              </NavLink>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "activeClassName": "active",
                "ariaCurrent": "true",
                "children": "Movie",
                "className": "logo1",
                "to": "/",
              },
              "ref": null,
              "rendered": "Movie",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "activeClassName": "active",
                "ariaCurrent": "true",
                "children": "Tracker",
                "className": "logo2",
                "to": "/",
              },
              "ref": null,
              "rendered": "Tracker",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "activeClassName": "active",
                "ariaCurrent": "true",
                "children": "Login / Sign up",
                "className": "login",
                "to": "/login/",
              },
              "ref": null,
              "rendered": "Login / Sign up",
              "type": [Function],
            },
          ],
          "type": "header",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "component": [Function],
            "exact": true,
            "path": "/favorites",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "component": [Function],
            "exact": true,
            "path": "/",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "component": [Function],
            "path": "/login/",
            "strict": true,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;

exports[`App  toggleLogin should match the snapshot when a user is logged in 1`] = `
<App
  user={
    Object {
      "id": 1,
      "name": "joe",
    }
  }
/>
`;

exports[`App  toggleLogin should match the snapshot when a user is not logged in 1`] = `
<App
  user={
    Object {
      "name": "",
    }
  }
/>
`;
